reactor: add OpenRewrite changes