@@ -65,7 +65,7 @@ public class ConstantsItemModel {
     private static ValidationMessage validateLabel(String input) {
         if (input == null) {
             return ValidationMessage.error("May not be null");
-        } else if (input.trim().isEmpty()) {
+        } else if (input.isBlank()) {
             return ValidationMessage.error(Localization.lang("Please enter the string's label"));
         } else if (IS_NUMBER.matcher(input).matches()) {
             return ValidationMessage.error(Localization.lang("The label of the string cannot be a number."));
@@ -73,18 +73,16 @@ public class ConstantsItemModel {
             return ValidationMessage.error(Localization.lang("The label of the string cannot contain the '#' character."));
         } else if (input.contains(" ")) {
             return ValidationMessage.error(Localization.lang("The label of the string cannot contain spaces."));
-        } else {
-            return null; // everything is ok
         }
+        return null; // everything is ok
     }
 
     private static ValidationMessage validateContent(String input) {
         if (input == null) {
             return ValidationMessage.error(Localization.lang("Must not be empty!"));
-        } else if (input.trim().isEmpty()) {
+        } else if (input.isBlank()) {
             return ValidationMessage.error(Localization.lang("Must not be empty!"));
-        } else {
-            return null; // everything is ok
         }
+        return null; // everything is ok
     }
 }
